# FastAPI-Backend-Template

./: .env.example  .gitignore  .pre-commit-config.yaml  init.sh  pyproject.toml  readme.txt
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/routes/: authentication.py
backend/src/config/settings/: base.py  development.py
backend/src/middleware/: request_id_middleware.py
backend/src/models/schemas/: base.py
backend/src/repository/: database.py
