[tool.poetry]
name = "backend"
version = "0.1.0"
description = "template for fastapi backend"
authors = ["Leon Li <yang02.li@medalsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "2.0.0b3"
alembic = "^1.13.3"
fastapi = "0.109.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
python-decouple = "^3.8"
asyncpg = "^0.30.0"
email-validator = "^2.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "4.0.1"
argon2-cffi = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
